<resources>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="app_name">Binker</string>
    <string name="login_text_register"> <u>Register here</u></string>
    <string name="login_notify_not_found">"Fuck you"</string>
    <string name="login_notify_found">"Welcome homo"</string>
    <string name="login_hint_username">"Username"</string>
    <string name="login_hint_password">"Password"</string>
    <string name="login_text_remember_me">"Remember Me"</string>
    <string name="login_text_new_here">"New here?"</string>
    <string name="login_button">"Log in"</string>
    <string name="facebook_app_id">372046701535216</string>
    <string name="fb_login_protocol_scheme">fb372046701535216</string>
    <string name="facebook_client_token">479f44bdda5f30022a764f34deb00ae5</string>
    <string name="fb_login_success">"facebook is fucking nice"</string>
    <string name="fb_login_fail">"facebook sucks anyway"</string>
    <string name="login_success">"Welcome back :)"</string>
    <string name="login_fail">"Wrong credentials"</string>
    <string name="register_success">"Welcome Binker ;)"</string>
    <string name="login_hint_email">"Email"</string>
    <string name="register_title">"Register"</string>
    <string name="register_hint_email">"Email</string>
    <string name="register_hint_confirm_password">"Confirm Password"</string>
    <string name="register_go">"Join"</string>
    <string name="Binker_de_beer">BinkerDeBeer</string>
    <string name="register_user_already_exists">"User already exists"</string>
    <string name="register_passwords_didnt_match">"Passwords didn't match"</string>
    <string name="register_password_too_short">"Password has to be at least 8 characters long"</string>
    <string name="register_unvalid_username">"Put in valid user name"</string>
    <string name="register_unvalid_email">"Put in valid email"</string>
    <string name="register_email_already_used">"This email is already used"</string>
    <string name="add_friend_title">"Add Friend"</string>
    <string name="add_friend_qr">"Your QR code"</string>
    <string-array name="Drinks">
        <item>Select drink</item>
        <item>Cara Pils</item>
        <item>Stella Artois</item>
        <item>Jupiler</item>
        <item>Westmalle</item>
        <item>Duvel</item>
        <item>Chateau Migraine</item>
        <item>Tripel Karmeliet</item>
        <item>Kasteel Rouge</item>
        <item>Vodka Redbull</item>
        <item>Appel Jenever</item>
    </string-array>

    <string name="friends_ic">friends ic</string>
    <string name="friends_delete">Your friends</string>
    <string name="favourite_beer">Favourite Beer</string>
    <string name="image_of_user">Image of user</string>
    <string name="name">Name</string>
    <string name="delete_icon">delete icon</string>
    <string name="show_friends_button">show friends button</string>

    <string name="todo">TODO</string>
    <string name="user_log_in_ic">user log in ic</string>
    <string name="password_log_in_ic">password log in ic</string>
    <string name="email_ic">email ic</string>
    <string name="back"><![CDATA[<-]]></string>

</resources>